[package]
name = "lexer"
version = "0.1.0"
authors = ["Robert Durfee <robert@durfee.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regular_expression = { git = "https://github.com/RobertDurfee/RegularExpression" }
