[package]
name = "lexer"
version = "0.1.0"
authors = ["Robert Durfee <robert@durfee.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "0.8", features = ["v4"] }
regular_expression = { path = "../RegularExpression" }
finite_automata = { path = "../FiniteAutomata" }
