[package]
name = "lexer"
version = "0.1.0"
authors = ["Robert Durfee <robert.durfee.17@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
interval-map = { path = "../../IntervalMap" }
re-bootstrap = { path = "../../RegularExpression/re-bootstrap" }
lexer-bootstrap = { path = "../lexer-bootstrap" }
parser-bootstrap = { path = "../../ParserGenerator/parser-bootstrap" }
