[package]
name = "simple-lexer-bootstrap"
version = "0.1.0"
authors = ["Robert Durfee <rbd@mit.edu>"]
description = "A simple, runtime lexer generator."
license = "MIT"
repository = "https://github.com/RobertDurfee/LexerGenerator/tree/v0.1.0"
readme = "README.md"
keywords = ["lexer", "lexer-generator", "lexical-analysis"]
categories = ["parsing"]
edition = "2018"
documentation = "https://docs.rs/simple-lexer-bootstrap/0.1.0/simple_lexer_bootstrap/"
homepage = "https://github.com/RobertDurfee/LexerGenerator/tree/v0.1.0"

[dependencies]
uuid = { version = "0.8", features = ["v4"] }
segment-map = { path = "../../SegmentMap", version = "0.1.0" }
finite-automata = { path = "../../FiniteAutomata", version = "0.1.1" }
regular-expression-bootstrap = { path = "../../RegularExpression/regular-expression-bootstrap", version = "0.1.0" }
