[package]
name = "simple-lexer"
version = "0.1.0"
authors = ["Robert Durfee <rbd@mit.edu>"]
description = "A simple, runtime lexer generator."
license-file = "LICENSE"
repository = "https://github.com/RobertDurfee/LexerGenerator"
readme = "README.md"
keywords = ["lexer", "lexer-generator", "lexical-analysis"]
categories = ["parsing"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
segment-map = "0.1.0"
regular-expression = "0.1.0"
simple-lexer-bootstrap = "0.1.0"
simple-parser-bootstrap = "0.1.0"
