[package]
name = "simple-lexer"
version = "0.1.0"
authors = ["Robert Durfee <rbd@mit.edu>"]
description = "A simple, runtime lexer generator."
license = "MIT"
repository = "https://github.com/RobertDurfee/LexerGenerator/tree/v0.1.0"
readme = "README.md"
keywords = ["lexer", "lexer-generator", "lexical-analysis"]
categories = ["parsing"]
edition = "2018"
documentation = "https://docs.rs/simple-lexer/0.1.0/simple_lexer/"
homepage = "https://github.com/RobertDurfee/LexerGenerator/tree/v0.1.0"

[dependencies]
lazy_static = "1.4.0"
segment-map = { path = "../../SegmentMap", version = "0.1.0" }
regular-expression = { path = "../../RegularExpression/regular-expression", version = "0.1.0" }
simple-lexer-bootstrap = { path = "../simple-lexer-bootstrap", version = "0.1.0" }
simple-parser-bootstrap = { path = "../../ParserGenerator/simple-parser-bootstrap", version = "0.1.0" }
